@@ -1,7 +1,7 @@
 package com.vivso.Vivso.Service;
 
 import com.vivso.Vivso.DTO.DocumentoDTO;
-import com.vivso.Vivso.Mapper.Mapper;
+import com.vivso.Vivso.Mapper.VivsoMapper;
 import com.vivso.Vivso.Model.Documento;
 import com.vivso.Vivso.Model.EstadoDocumento;
 import com.vivso.Vivso.Model.TipoDocumento;
@@ -20,49 +20,48 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class DocumentoService implements IDocumentoService {
+
     @Autowired private IDocumentoRepository docRepo;
     @Autowired private IFamiliaRepository familiaRepo;
     @Autowired private IOrganizacionRepository orgRepo;
     @Autowired private IUsuarioRepository usuarioRepo;
+    @Autowired private VivsoMapper mapper;
 
-    private final String rootFolder = "uploads/documentos"; // Carpeta relativa al proyecto
+    private final String rootFolder = "uploads/documentos";
+    private static final long MAX_SIZE_BYTES = 5 * 1024 * 1024; // 5MB
+    private static final List<String> EXTENSIONES_PERMITIDAS = List.of("pdf", "jpg", "jpeg", "png");
 
     @Override
     @Transactional
     public DocumentoDTO subirDocumento(MultipartFile archivo, TipoDocumento tipo, Integer idFamilia, String cuitOrg) {
         try {
-            // 1. Creamos la carpeta si no existe
             Path pathRoot = Paths.get(rootFolder);
             if (!Files.exists(pathRoot)) Files.createDirectories(pathRoot);
 
-            // 2. Generamos un nombre único para que no se pisen archivos con el mismo nombre
-            String nombreArchivo = UUID.randomUUID().toString() + "_" + archivo.getOriginalFilename();
+            String nombreArchivo = UUID.randomUUID() + "_" + archivo.getOriginalFilename();
             Path destino = pathRoot.resolve(nombreArchivo);
-
-            // 3. Guardamos el archivo físicamente
             Files.copy(archivo.getInputStream(), destino, StandardCopyOption.REPLACE_EXISTING);
 
-            // 4. Creamos la entidad
             Documento doc = new Documento();
-            doc.setNombreOriginal(archivo.getOriginalFilename());
-            doc.setUrlPath(destino.toString());
+            doc.setNombre(archivo.getOriginalFilename());
+            doc.setUrl(destino.toString());
             doc.setTipo(tipo);
-            doc.setEstado(EstadoDocumento.PENDIENTE); // Siempre nace pendiente
+            doc.setEstado(EstadoDocumento.PENDIENTE);
 
-            // Vinculamos a quién pertenece
             if (idFamilia != null) doc.setFamilia(familiaRepo.findById(idFamilia).orElse(null));
-            if (cuitOrg != null) doc.setOrganizacion(orgRepo.findById(cuitOrg).orElse(null));
+            if (cuitOrg   != null) doc.setOrganizacion(orgRepo.findById(cuitOrg).orElse(null));
 
-            return Mapper.toDTO(docRepo.save(doc));
+            return mapper.toDTO(docRepo.save(doc));
 
         } catch (IOException e) {
-            throw new RuntimeException("Error al guardar el archivo físico: " + e.getMessage());
+            throw new RuntimeException("Error al guardar el archivo: " + e.getMessage());
         }
     }
 
@@ -70,7 +69,7 @@ public class DocumentoService implements IDocumentoService {
     @Transactional
     public DocumentoDTO revisar(Integer idDoc, Integer idRevisor, EstadoDocumento nuevoEstado, String motivo) {
         Documento doc = docRepo.findById(idDoc)
-                .orElseThrow(() -> new RuntimeException("Documento no encontrado"));
+                .orElseThrow(() -> new RuntimeException("Documento no encontrado: " + idDoc));
 
         Usuario revisor = usuarioRepo.findById(idRevisor)
                 .orElseThrow(() -> new RuntimeException("El revisor es obligatorio para validar"));
@@ -79,47 +78,68 @@ public class DocumentoService implements IDocumentoService {
         doc.setRevisor(revisor);
         doc.setMotivoRechazo(nuevoEstado == EstadoDocumento.RECHAZADO ? motivo : null);
 
-        return Mapper.toDTO(docRepo.save(doc));
+        doc.setFechaRevision(LocalDateTime.now());
+
+        return mapper.toDTO(docRepo.save(doc));
     }
 
     @Override
     public List<DocumentoDTO> listarPorFamilia(Integer idFamilia) {
-        if (!familiaRepo.existsById(idFamilia)) {
-            throw new RuntimeException("No se encontró la familia con ID: " + idFamilia);
-        }
-
-        // Ahora sí, traemos los documentos y mapeamos
-        return docRepo.findByFamilia_IdFamilia(idFamilia).stream() // Cambié el nombre según tu entidad
-                .map(Mapper::toDTO)
-                .collect(Collectors.toList());
+        if (!familiaRepo.existsById(idFamilia))
+            throw new RuntimeException("No se encontró la familia: " + idFamilia);
+        return docRepo.findByFamilia_IdFamilia(idFamilia).stream()
+                .map(mapper::toDTO)
+                .toList();
     }
 
     @Override
     public List<DocumentoDTO> listarPorOrganizacion(String cuitOrg) {
-        if (!orgRepo.existsById(cuitOrg)) {
-            throw new RuntimeException("No se encontró la organización con CUIT: " + cuitOrg);
-        }
-
+        if (!orgRepo.existsById(cuitOrg))
+            throw new RuntimeException("No se encontró la organización: " + cuitOrg);
         return docRepo.findByOrganizacion_Cuit(cuitOrg).stream()
-                .map(Mapper::toDTO)
-                .collect(Collectors.toList());
+                .map(mapper::toDTO)
+                .toList();
     }
 
     @Override
     public List<DocumentoDTO> listarPorUsuarioRevisor(Integer idUsuario) {
-        if (!usuarioRepo.existsById(idUsuario)) {
-            throw new RuntimeException("No se encontró el usuario revisor con ID: " + idUsuario);
-        }
-
+        if (!usuarioRepo.existsById(idUsuario))
+            throw new RuntimeException("No se encontró el revisor: " + idUsuario);
         return docRepo.findByRevisor_Id(idUsuario).stream()
-                .map(Mapper::toDTO)
-                .collect(Collectors.toList());
+                .map(mapper::toDTO)
+                .toList();
     }
 
     @Override
-    @Transactional
     public void eliminar(Integer id) {
-        // Aquí podrías agregar lógica para borrar el archivo físico también
         docRepo.deleteById(id);
     }
+
+    private void validarArchivo(MultipartFile archivo, String nombreCampo) {
+        if (archivo == null || archivo.isEmpty()) return;
+
+        // Validar tamaño
+        if (archivo.getSize() > MAX_SIZE_BYTES) {
+            throw new RuntimeException(
+                    "El archivo '" + nombreCampo + "' supera el máximo de 5MB " +
+                            "(peso actual: " + archivo.getSize() / (1024 * 1024) + "MB)"
+            );
+        }
+
+        // Validar extensión
+        String nombreOriginal = archivo.getOriginalFilename();
+        if (nombreOriginal == null || !nombreOriginal.contains(".")) {
+            throw new RuntimeException("El archivo '" + nombreCampo + "' no tiene una extensión válida");
+        }
+
+        String extension = nombreOriginal.substring(nombreOriginal.lastIndexOf('.') + 1).toLowerCase();
+        if (!EXTENSIONES_PERMITIDAS.contains(extension)) {
+            throw new RuntimeException(
+                    "El archivo '" + nombreCampo + "' tiene extensión no permitida (." + extension + "). " +
+                            "Solo se aceptan: PDF, JPG, PNG"
+            );
+        }
+    }
+
+
 }
